# hekate

./: Cargo.toml  README.md  deny.toml  justfile
.github/workflows/: ci.yml
hekate/: Cargo.toml
hekate-aes/: Cargo.toml  README.md
hekate-aes/src/: aes128.rs  aes256.rs  lib.rs  sbox_rom.rs  trace.rs
hekate-aes/tests/: aes_chiplet.rs
hekate-core/: Cargo.toml  README.md
hekate-core/src/: config.rs  errors.rs  lib.rs  proofs.rs  protocol.rs  tensor.rs  trace.rs  utils.rs
hekate-core/src/poly/: mod.rs  univariate.rs  variant.rs
hekate-crypto/: Cargo.toml  NOTICE  README.md
hekate-crypto/benches/: merkle.rs
hekate-crypto/src/: expander_matrix.rs  lib.rs  merkle.rs  transcript.rs
hekate-crypto/src/hashers/: blake3.rs  mod.rs  sha256.rs  sha3.rs
hekate-gadgets/: Cargo.toml  README.md
hekate-gadgets/src/: lib.rs
hekate-gadgets/src/atoms/: int_arith.rs  mod.rs
hekate-gadgets/src/chiplets/: keccak.rs  mod.rs  ram.rs  rom.rs
hekate-gadgets/src/chiplets/aes/: aes128.rs  aes256.rs  mod.rs  sbox_rom.rs  trace.rs
hekate-gadgets/src/chiplets/int/: arith.rs  mod.rs
hekate-gadgets/src/chiplets/pqc/: basemul.rs  high_bits.rs  mod.rs  norm_check.rs  ntt.rs  twiddle_rom.rs  utils.rs
hekate-gadgets/src/chiplets/pqc/mldsa/: arithmetic.rs  ctrl.rs  mod.rs  trace.rs  witness.rs
hekate-gadgets/src/chiplets/pqc/mlkem/: arithmetic.rs  ctrl.rs  mod.rs  trace.rs  witness.rs
hekate-gadgets/tests/: fips202_kat.rs
hekate-keccak/: Cargo.toml  README.md
hekate-keccak/benches/: keccak.rs
hekate-keccak/src/: lib.rs
hekate-keccak/tests/: fips202_kat.rs  keccak_chiplet.rs
hekate-pqc/: Cargo.toml  README.md
hekate-pqc/src/: basemul.rs  high_bits.rs  lib.rs  norm_check.rs  ntt.rs  twiddle_rom.rs  utils.rs
hekate-pqc/src/mldsa/: arithmetic.rs  ctrl.rs  mod.rs  trace.rs  witness.rs
hekate-pqc/src/mlkem/: arithmetic.rs  ctrl.rs  mod.rs  trace.rs  witness.rs
hekate-pqc/tests/: basemul_chiplet.rs  mldsa_chiplet.rs  mlkem_chiplet.rs  ntt_chiplet.rs  twiddle_rom.rs
hekate-program/: Cargo.toml  README.md
hekate-program/src/: chiplet.rs  expander.rs  lib.rs  permutation.rs  schema.rs
hekate-program/src/constraint/: builder.rs  mod.rs
hekate-program/tests/: fixed_shape.rs
hekate-prover-sys/: Cargo.toml  README.md  build.rs
hekate-prover-sys/artifacts/: manifest.toml
hekate-prover-sys/src/: cancel.rs  error.rs  ffi.rs  lib.rs  witness.rs
hekate-prover-sys/tests/: roundtrip.rs
hekate-scribble/: Cargo.toml  README.md
hekate-scribble/src/: apply.rs  check.rs  config.rs  lib.rs  mutation.rs  prelude.rs  strategy.rs  target.rs
hekate-scribble/tests/: int_arith_example.rs  mutation_kinds.rs  ram_example.rs
hekate-sdk/: Cargo.toml  README.md
hekate-sdk/schema/: hekate_program.fbs  hekate_proof.fbs
hekate-sdk/src/: builder.rs  lib.rs  preflight.rs  program.rs
hekate-sdk/src/wire/: ast.rs  boundary.rs  bundle.rs  chiplet.rs  config.rs  expander.rs  field.rs  fixed_column.rs  lagrange.rs  mod.rs  permutation.rs  proof.rs  trace.rs
hekate-sdk/tests/: preflight.rs  program_structural_hash.rs  wire_roundtrip.rs
hekate-verifier/: Cargo.toml  README.md
hekate-verifier/src/: brakedown.rs  evaluator.rs  lib.rs  logup.rs  sumcheck.rs
hekate/benches/: keccak.rs  rom.rs
hekate/examples/: aes.rs  arith.rs  composite_chiplets.rs  fibonacci.rs  fibonacci_raw.rs  keccak.rs  keccak_inline.rs  many_chiplets.rs  mldsa.rs  mlkem.rs  ram.rs  rollup.rs  rom.rs
hekate/examples/common/: mod.rs
hekate/src/: lib.rs
hekate/tests/: aes_chiplet.rs  basemul_chiplet.rs  bidirectional_mutex.rs  bus_security.rs  chiplet_boundary.rs  chiplet_security.rs  chiplets_combo.rs  composite_chiplet.rs  full_program.rs  gpa.rs  int_arith_chiplet.rs  keccak_chiplet.rs  lookup_parity_forgery.rs  mldsa_chiplet.rs  mlkem_chiplet.rs  ntt_chiplet.rs  ram_chiplet.rs  rom_chiplet.rs  security_exploits.rs  selectors.rs  virtual_packing_security.rs  zk_security.rs
