[package]
name = "hekate-aes"
version = "0.3.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository = "https://github.com/oumuamua-labs/hekate/tree/main/hekate-aes"
description = "AES-128 / AES-256 AIR chiplet for the Hekate ZK proving system."
keywords = ["zk", "cryptography", "aes", "air", "no-std"]
categories = ["cryptography", "no-std"]
readme = "README.md"

[lib]
crate-type = ["rlib"]

[features]
default = ["std", "blake3"]
std = [
    "hekate-core/std",
    "hekate-program/std",
    "hekate-math/std",
]
blake3 = ["hekate-core/blake3"]
sha2 = ["hekate-core/sha2"]
sha3 = ["hekate-core/sha3"]

[dependencies]
hekate-math = { workspace = true }
hekate-core = { workspace = true }
hekate-program = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
hekate-crypto = { workspace = true, features = ["std", "blake3"] }
hekate-verifier = { workspace = true, features = ["std", "blake3"] }
hekate-sdk = { workspace = true, features = ["std", "blake3"] }
hekate-prover-sys = { workspace = true, features = ["blake3", "public"] }
hekate-scribble = { workspace = true }
rand = "0.9"