[package]
name = "hekate-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Hash abstraction for the Hekate ZK proving system: Blake3, SHA-256, SHA-3-256."
keywords = ["zk", "cryptography", "hash", "blake3", "no-std"]
categories = ["cryptography", "no-std"]
readme = "README.md"

[lib]
crate-type = ["rlib"]

[features]
default = ["std", "blake3", "parallel"]
std = ["hekate-math/std"]
blake3 = ["dep:blake3"]
sha2 = ["dep:sha2"]
sha3 = ["dep:sha3"]
parallel = ["dep:rayon", "hekate-math/parallel"]
expander = ["dep:aes", "dep:rand"]
transcript-trace = []

[dependencies]
hekate-math = { workspace = true }
aes = { version = "0.9", default-features = false, optional = true }
rand = { version = "0.10", default-features = false, optional = true }
rayon = { workspace = true, optional = true }
blake3 = { version = "1.8", default-features = false, optional = true }
sha2 = { version = "0.11", default-features = false, optional = true }
sha3 = { version = "0.11", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.8"
proptest = "1"
rand = "0.10"

[[bench]]
name = "merkle"
harness = false
