[package]
name = "hekate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[features]
default = ["std", "parallel", "blake3"]
std = [
    "hekate-math/std",
    "hekate-core/std",
    "hekate-verifier/std",
    "hekate-gadgets/std",
    "hekate-sdk/std",
]
parallel = [
    "dep:rayon",
    "hekate-math/parallel",
    "hekate-core/parallel",
    "hekate-gadgets/parallel",
    "hekate-sdk/parallel",
]
secure-memory = ["hekate-core/secure-memory"]
blake3 = [
    "hekate-core/blake3",
    "hekate-gadgets/blake3",
    "hekate-sdk/blake3",
]
sha2 = [
    "hekate-core/sha2",
    "hekate-gadgets/sha2",
    "hekate-sdk/sha2",
]
sha3 = [
    "hekate-core/sha3",
    "hekate-gadgets/sha3",
    "hekate-sdk/sha3",
]
table-math = ["hekate-math/table-math"]

[dependencies]
hekate-core = { workspace = true }
hekate-crypto = { workspace = true }
hekate-math = { workspace = true }
hekate-program = { workspace = true }
hekate-gadgets = { workspace = true }
hekate-verifier = { workspace = true }
rayon = { version = "1.11", optional = true }

[dev-dependencies]
hekate-prover-sys = { workspace = true, features = ["blake3", "public"] }
hekate-sdk = { workspace = true }
hekate-keccak = { version = "0.1", default-features = false, features = ["std", "blake3"] }
hekate-aes = { version = "0.1", default-features = false, features = ["std", "blake3"] }
hekate-pqc = { version = "0.2", default-features = false, features = ["std", "blake3"] }
zk-scribble = "0.1"
criterion = "0.8"
proptest = "1.9"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing = { version = "0.1", features = ["attributes"] }
bincode = { version = "2.0.1", features = ["serde", "alloc"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"
keccak = "0.2"
pqcrypto-mlkem = "0.1"
pqcrypto-mldsa = "0.1"
pqcrypto-traits = "0.3"

[[bench]]
name = "rom"
harness = false
