[package]
name = "hekate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[features]
default = ["std", "parallel", "blake3", "public"]
std = [
    "hekate-math/std",
    "hekate-core/std",
    "hekate-verifier/std",
    "hekate-gadgets/std",
    "hekate-sdk/std",
]
parallel = [
    "dep:rayon",
    "hekate-math/parallel",
    "hekate-core/parallel",
    "hekate-gadgets/parallel",
    "hekate-sdk/parallel",
    "hekate-verifier/parallel",
]
secure-memory = ["hekate-core/secure-memory"]
blake3 = [
    "hekate-core/blake3",
    "hekate-gadgets/blake3",
    "hekate-sdk/blake3",
]
sha2 = [
    "hekate-core/sha2",
    "hekate-gadgets/sha2",
    "hekate-sdk/sha2",
]
sha3 = [
    "hekate-core/sha3",
    "hekate-gadgets/sha3",
    "hekate-sdk/sha3",
]
table-math = ["hekate-math/table-math", "hekate-verifier/table-math"]
dhat-heap = ["dep:dhat"]
ct = ["hekate-prover-sys/ct"]
public = ["hekate-prover-sys/public"]

[dependencies]
hekate-core = { workspace = true }
hekate-crypto = { workspace = true }
hekate-math = { workspace = true }
hekate-program = { workspace = true }
hekate-gadgets = { workspace = true }
hekate-verifier = { workspace = true }
rayon = { version = "1.11", optional = true }
dhat = { version = "0.3", optional = true }

[dev-dependencies]
hekate-prover-sys = { workspace = true, features = ["blake3"] }
hekate-sdk = { workspace = true }
hekate-keccak = { workspace = true, features = ["std", "blake3"] }
hekate-aes = { workspace = true, features = ["std", "blake3"] }
hekate-pqc = { workspace = true, features = ["std", "blake3"] }
hekate-scribble = { workspace = true }
criterion = "0.8"
proptest = "1.9"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing = { version = "0.1", features = ["attributes"] }
bincode = { version = "2.0.1", features = ["serde", "alloc"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"
keccak = "0.2"
ml-kem = { version = "0.3", features = ["getrandom"] }
ml-dsa = "0.1"

[[bench]]
name = "rom"
harness = false
